Cleanup code
Remove unused parameters, unnecessary methods and unnessary type cast.
Fix doc error.

Signed-off-by: Vijayan Balasubramanian <balasvij@amazon.com>